Test-134513 Selenium: Sonar: Constructors should not be used to instantiate "String", "BigInteger", "BigDecimal" and primitive-wrapper classes